# WorkAgent

./: .env.example  .env.langfuse  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  clickhouse-config.xml  conftest.py  docker-compose.yml  langfuse-simple.yml  package-lock.json  pyproject.toml  requirements.txt  server_logs.txt  server_logs_new.txt  start_local.sh  test_a2a_creation.py  test_workflow.json  verify_user.py
docs/: UPLOAD_INSTRUCTIONS.md
frontend/: Dockerfile  docker-compose.yml  index.html  package-lock.json  pnpm-lock.yaml  vite.config.ts
frontend-sec/: designsystem.md  frontend_logs.txt  package.json  pnpm-lock.yaml  tailwind.config.js
frontend-sec/src/: index.css
frontend-sec/src/components/: AgentCard.tsx
frontend-sec/src/components/agents/: AgentList.tsx  AgentSidebar.tsx  SearchInput.tsx
frontend-sec/src/components/agents/config/: A2AAgentConfig.tsx  LoopAgentConfig.tsx  ParallelAgentConfig.tsx  TaskAgentConfig.tsx
frontend-sec/src/components/agents/dialogs/: AgentFormDialog.tsx  AgentToolDialog.tsx  FolderDialog.tsx  MCPDialog.tsx  ShareAgentDialog.tsx
frontend-sec/src/components/agents/tabs/: TaskAgentConfig.tsx
frontend-sec/src/components/chat/: AgentExecutionView.tsx  AgentInfoDialog.tsx  ChatMessage.tsx  ExecutionStep.tsx  JsonViewer.tsx  SessionList.tsx
frontend-sec/src/components/layout/: Header.tsx
frontend-sec/src/components/profile/docs/: A2AComplianceCard.tsx  CodeBlock.tsx  DocumentationSection.tsx  FrontendImplementationSection.tsx  LabSection.tsx  TechnicalDetailsSection.tsx
frontend-sec/src/components/profile/tabs/: DocumentationTab.tsx  SecurityTab.tsx  TeamTab.tsx
frontend-sec/src/components/ui/: avatar.tsx  command.tsx  separator.tsx  toaster.tsx  tooltip.tsx
frontend-sec/src/components/workflow/: utils.ts
frontend-sec/src/components/workflow/edges/: DefaultEdge.tsx
frontend-sec/src/components/workflow/utils/: floating-edge-utils.ts
frontend-sec/src/contexts/: AuthContext.tsx  DnDContext.tsx
frontend-sec/src/lib/: file-utils.ts  groupHistoricalMessages.ts  utils.ts
frontend-sec/src/pages/: AgentsPage.tsx  ClientsPage.tsx  LandingPage.tsx  LoginPage.tsx  MCPServersPage.tsx  ProfilePage.tsx
frontend-sec/src/services/: api.ts  authService.ts  chatService.ts  mcpServerService.ts  sessionService.ts  teamService.ts
frontend-sec/src/styles/: index.css
frontend-sec/src/types/: auth.ts  chat.ts  team.ts
frontend/app/agents/: page.tsx
frontend/src/: App.tsx  index.tsx
frontend/src/components/: AdminClientSelector.tsx  ImpersonationBar.tsx  ProtectedRoute.tsx
frontend/src/components/agents/: AgentCard.tsx  AgentTypeSelector.tsx  EmptyState.tsx
frontend/src/components/agents/config/: SequentialAgentConfig.tsx
frontend/src/components/agents/dialogs/: ApiKeysDialog.tsx  ConfirmationDialog.tsx  CustomMCPDialog.tsx  CustomToolDialog.tsx  FolderFormDialog.tsx  MoveAgentDialog.tsx
frontend/src/components/agents/tabs/: BasicInfoTab.tsx  ConfigurationTab.tsx  SubAgentsTab.tsx
frontend/src/components/chat/: ChatContainer.tsx  ChatInput.tsx  InlineDataAttachments.tsx
frontend/src/components/layout/: AppLayout.tsx  Footer.tsx
frontend/src/components/profile/docs/: CodeExamplesSection.tsx  HttpLabForm.tsx  QuickStartTemplates.tsx  StreamLabForm.tsx
frontend/src/components/ui/: button.tsx  card.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  popover.tsx  progress.tsx  scroll-area.tsx  select.tsx  tabs.tsx  textarea.tsx
frontend/src/components/workflow/: Canva.tsx  ContextMenu.tsx  HelperLines.tsx  NodePanel.tsx  canva.css
frontend/src/contexts/: ClientContext.tsx
frontend/src/hooks/: use-agent-webSocket.ts  useToast.ts
frontend/src/hooks/profile/: useA2ALab.ts
frontend/src/lib/: agentMessageGrouper.ts  env.ts
frontend/src/pages/: ChatPage.tsx  DocsPage.tsx  WorkflowEditorPage.tsx
frontend/src/services/: adminClientService.ts  agentService.ts  uploadService.ts
frontend/src/types/: agent.ts  aiModels.ts  auth.ts  mcpServer.ts
k8s/: backend.yaml  cloudflare-tunnel.yaml  configmap.yaml  frontend.yaml  ingress.yaml  mcp-sync-cronjob.yaml  namespace.yaml  postgres.yaml  redis.yaml  secrets.yaml  uploads-pvc.yaml
migrations/versions/: 172e7ed2198c_add_role_to_user.py  9c84197411d9_add_performance_indexes.py  b5c144fc5e04_add_refresh_tokens_table.py  d963c4d89e66_add_avatar_url_to_agents.py
scripts/: debug_trae_tools.py  prepare_upload.sh  remove_headers.py
servers/: trae-server.py
src/: main.py
src/api/: a2a_routes.py  agent_routes.py  auth_routes.py  chat_routes.py  client_routes.py  client_users_routes.py  mcp_server_routes.py  session_routes.py  tool_routes.py  upload_routes.py
src/config/: redis.py  settings.py
src/core/: decorators.py  dependencies.py  exceptions.py  jwt_middleware.py  permissions.py  secrets_manager.py  validators.py
src/domain/: __init__.py  agent.py  session.py  user.py
src/models/: models.py
src/repositories/: __init__.py  agent_repository.py  base.py  session_repository.py  user_repository.py
src/schemas/: a2a_enhanced_types.py  a2a_types.py  agent_config.py  chat.py  schemas.py  user.py
src/scripts/: __init__.py  audit_mcp.py  compare_mcp.py  debug_vet.py  enable_all_tools.py  fix_vet_token.py  force_fix_vet.py  sync_mcp_tools.py  verify_users.py
src/services/: a2a_sdk_adapter.py  agent_service.py  apikey_service.py  auth_service.py  cache_service.py  client_service.py  email_service.py  mcp_server_service.py  service_providers.py  session_service.py  token_service.py  user_service.py
src/services/adk/: agent_builder.py  agent_runner.py  custom_home_mcp_transport.py  custom_tools.py  mcp_service.py
src/services/adk/custom_agents/: a2a_agent.py  task_agent.py  workflow_agent.py
src/services/crewai/: agent_builder.py  agent_runner.py  custom_tool.py  mcp_service.py  session_service.py
src/templates/emails/: user_invite.html
src/utils/: a2a_enhanced_client.py  a2a_utils.py  crypto.py  langfuse_monitor.py  mcp_discovery.py  otel.py  security.py  streaming.py
tests/: test_auth_security.py
(+16 files in other folders)
