[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evo-ai"
version = "1.0.0"
description = "API for executing AI agents"
readme = "README.md"
authors = [
    {name = "Davidson Gomes", email = "contato@evolution-api.com"}
]
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

# Main dependencies
dependencies = [
    "fastapi==0.115.12", 
    "uvicorn==0.34.2",
    "pydantic==2.11.3",
    "sqlalchemy==2.0.40",
    "psycopg2==2.9.10",
    "psycopg2-binary==2.9.10",
    "google-cloud-aiplatform==1.90.0",
    "python-dotenv==1.1.0",
    "google-adk==0.3.0",
    "litellm>=1.68.0,<1.69.0",
    "python-multipart==0.0.20",
    "alembic==1.15.2",
    "asyncpg==0.30.0",
    "python-jose==3.4.0",
    "passlib==1.7.4",
    "sendgrid==6.11.0",
    "pydantic-settings==2.9.1",
    "fastapi_utils==0.8.0",
    "bcrypt==4.3.0",
    "jinja2==3.1.6",
    "pydantic[email]==2.11.3",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "redis==5.3.0",
    "sse-starlette==2.3.3",
    "jwcrypto==1.5.6",
    "pyjwt[crypto]==2.9.0",
    "cryptography==44.0.0",
    "langgraph==0.2.70",
    "langchain==0.3.14",
    "langchain-core==0.3.28",
    "langchain-community==0.3.14",
    "langchain-openai==0.2.14",
    "langchain-anthropic==0.2.8",
    "langchain-google-genai==2.0.8",
    "langchain-google-vertexai==2.1.0",
    "langchain-groq==0.2.1",
    "langchain-ollama==0.2.1",
    "langchain-mistralai==0.2.3",
    "langchain-cohere==0.3.7",
    "langchain-huggingface==0.1.2",
    "langchain-together==0.2.1",
    "langchain-fireworks==0.2.5",
    "langchain-text-splitters==0.3.4",
    "langchain-experimental==0.3.5",
    "langsmith==0.2.7",
    "mcp==1.1.0",
    "websockets==14.1",
    "aiofiles==24.1.0",
    "pillow==11.1.0",
    "requests==2.32.3",
    "pyyaml==6.0.2",
    "jsonschema==4.23.0",
    "typing-extensions==4.12.2",
    "uuid==1.30",
    "email-validator==2.2.0",
    "python-magic==0.4.27",
    "python-magic-bin==0.4.14",
    "filetype==1.2.0",
    "python-slugify==8.0.4",
    "unidecode==1.3.8",
    "bleach==6.2.0",
    "markdown==3.7",
    "markupsafe==3.0.2",
    "itsdangerous==2.2.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "rich==13.9.4",
    "typer==0.15.1",
    "shellingham==1.5.4",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "idna==3.10",
    "urllib3==2.3.0",
    "anyio==4.8.0",
    "sniffio==1.3.1",
    "exceptiongroup==1.2.2",
    "h11==0.14.0",
    "starlette==0.41.3",
    "annotated-types==0.7.0",
    "pydantic-core==2.32.1",
    "greenlet==3.1.1",
    "typing-extensions==4.12.2",
    "setuptools==75.8.0",
    "wheel==0.45.1",
    "pip==24.3.1",
]

# Development dependencies
[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "black==24.10.0",
    "flake8==7.1.1",
    "isort==5.13.2",
    "mypy==1.14.1",
    "pre-commit==4.0.1",
    "httpx==0.28.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true